fix: use popup manager api's and improve readability

--- a/src/styles/Extn-UserProfile.less
+++ b/src/styles/Extn-UserProfile.less
@@ -9,7 +9,7 @@
     overflow: hidden;
     position: absolute;
     z-index: @z-index-brackets-context-menu-base;
-    animation: dropdown 90ms cubic-bezier(0, .97, .2, .99);
+    animation: user-profile-dropdown-animation 90ms cubic-bezier(0, .97, .2, .99);
     transform-origin: 0 0;
 
     .popup-header {
@@ -240,7 +240,7 @@
     }
 }
 
-@keyframes dropdown {
+@keyframes user-profile-dropdown-animation {
     0%   { opacity: 0.5; transform: translate3d(0, 0, 0) scale(0.5); }
     100% { opacity: 1; transform: translate3d(0, 0, 0) scale(1); }
 }
